# langchain_menu_generator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/langchain_menu_generator/: chain_function.ipynb
src/langchain_menu_generator/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  secret_key-checkpoint.py
src/streamlit/: langchain_helper.py  main.py
